--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,9 +1,9 @@
 platform :ios, '11.0'
 
-require_relative '../node_modules/react-native/scripts/react_native_pods'
-require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+target 'itfllcmobileapp' do
+  require_relative '../node_modules/react-native/scripts/react_native_pods'
+  require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-target 'App' do
   config = use_native_modules!
 
   use_react_native!(
@@ -11,7 +11,9 @@ target 'App' do
     :hermes_enabled => false
   )
 
-  post_install do |installer|
-    react_native_post_install(installer)
+  target 'itfllcmobileappTests' do
+    inherit! :complete
+    # Pods for testing
   end
+
 end
