--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -10,8 +10,9 @@ workflows:
       - name: Install Dependencies
         script: |
           npm install
-      - name: Build iOS app
+      - name: Add iOS platform and build
         script: |
+          cordova platform rm ios || true
           cordova platform add ios
           cordova build ios --release --device
     artifacts:
