--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,17 +3,19 @@ workflows:
     name: Cordova iOS Build
     environment:
       xcode: latest
+      vars:
+        CORDOVA_PLATFORM: ios
     scripts:
       - name: Install Cordova
         script: |
           npm install -g cordova
-      - name: Install Dependencies
+      - name: Install project dependencies
         script: |
           npm install
       - name: Add iOS platform and build
         script: |
           cordova platform rm ios || true
-          cordova platform add ios
+          cordova platform add $CORDOVA_PLATFORM
           cordova build ios --release --device
     artifacts:
       - platforms/ios/build/device/*.ipa
