--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -7,14 +7,13 @@ workflows:
       - name: Install Cordova
         script: |
           npm install -g cordova
-      - name: Install project dependencies
+      - name: Install dependencies
         script: |
           npm install
       - name: Add iOS platform and build
         script: |
-          cordova telemetry off
           cordova platform rm ios || true
           cordova platform add ios
-          cordova build ios --release --device --verbose
+          cordova build ios --release --device
     artifacts:
       - platforms/ios/build/device/*.ipa
