Add Codemagic iOS build configeqwewdsdsaq

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,9 +3,8 @@ workflows:
     name: Cordova iOS Build
     environment:
       xcode: latest
-      vars:
-        DEVELOPMENT_TEAM: $DEVELOPMENT_TEAM
-        CODE_SIGN_IDENTITY: iPhone Developer
+      groups:
+        - ios-signing
     scripts:
       - name: Install Cordova
         script: |
