--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,21 +4,29 @@ workflows:
     environment:
       xcode: latest
       groups:
-        - ios-signing  # make sure this group has the files
+        - ios-signing  # contains uploaded .p12 and .mobileprovision files
       vars:
         XCODE_WORKSPACE: "ITF UTILITY.xcworkspace"
         XCODE_SCHEME: "ITF UTILITY"
         XCODE_PROJECT: "platforms/ios/ITF UTILITY.xcodeproj"
-        DEVELOPMENT_TEAM: M5BW9K22PK  # your Apple team ID
+        DEVELOPMENT_TEAM: M5BW9K22PK
         PROVISIONING_PROFILE: itf_distribution_profile
         CERTIFICATE: itf_distribution_cert
     scripts:
       - name: Install Cordova
         script: |
           npm install -g cordova
+
       - name: Install Dependencies
         script: |
           npm install
+
+      - name: Set up provisioning profile
+        script: |
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          uuid=$(grep -a -E -o "[-A-F0-9]{36}" $PROVISIONING_PROFILE | head -1)
+          cp $PROVISIONING_PROFILE ~/Library/MobileDevice/Provisioning\ Profiles/$uuid.mobileprovision
+
       - name: Clean and Add iOS platform and build
         script: |
           rm -rf platforms/ plugins/
@@ -29,5 +37,6 @@ workflows:
             --buildFlag="-UseModernBuildSystem=0" \
             --buildFlag="-allowProvisioningDeviceRegistration" \
             --developmentTeam=$DEVELOPMENT_TEAM
+
     artifacts:
       - platforms/ios/build/device/*.ipa
