--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -10,9 +10,11 @@ workflows:
         XCODE_SCHEME: "ITF UTILITY"
         XCODE_PROJECT: "platforms/ios/ITF UTILITY.xcodeproj"
         DEVELOPMENT_TEAM: M5BW9K22PK
-    files:
-      - provisioning_profile: itf_distribution_profile
-      - certificate: itf_distribution_cert
+    code_signing:
+      provisioning_profiles:
+        - itf_distribution_profile
+      certificates:
+        - itf_distribution_cert
     scripts:
       - name: Install Cordova
         script: |
@@ -25,8 +27,8 @@ workflows:
       - name: Set up provisioning profile
         script: |
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          uuid=$(grep -a -E -o "[-A-F0-9]{36}" $provisioning_profile | head -1)
-          cp $provisioning_profile ~/Library/MobileDevice/Provisioning\ Profiles/$uuid.mobileprovision
+          uuid=$(grep -a -E -o "[-A-F0-9]{36}" ./itf_distribution_profile | head -1)
+          cp ./itf_distribution_profile ~/Library/MobileDevice/Provisioning\ Profiles/$uuid.mobileprovision
 
       - name: Clean and Add iOS platform and build
         script: |
