--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,17 +4,12 @@ workflows:
     environment:
       xcode: latest
       groups:
-        - ios-signing
+        - ios-signing  # this includes your uploaded .p12 and .mobileprovision files
       vars:
         XCODE_WORKSPACE: "ITF UTILITY.xcworkspace"
         XCODE_SCHEME: "ITF UTILITY"
         XCODE_PROJECT: "platforms/ios/ITF UTILITY.xcodeproj"
         DEVELOPMENT_TEAM: M5BW9K22PK
-    code_signing:
-      provisioning_profiles:
-        - itf_distribution_profile
-      certificates:
-        - itf_distribution_cert
     scripts:
       - name: Install Cordova
         script: |
@@ -27,8 +22,8 @@ workflows:
       - name: Set up provisioning profile
         script: |
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          uuid=$(grep -a -E -o "[-A-F0-9]{36}" ./itf_distribution_profile | head -1)
-          cp ./itf_distribution_profile ~/Library/MobileDevice/Provisioning\ Profiles/$uuid.mobileprovision
+          uuid=$(grep -a -E -o "[-A-F0-9]{36}" itf_distribution_profile | head -1)
+          cp itf_distribution_profile ~/Library/MobileDevice/Provisioning\ Profiles/$uuid.mobileprovision
 
       - name: Clean and Add iOS platform and build
         script: |
