--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,18 +4,18 @@ workflows:
     environment:
       xcode: latest
       groups:
-        - ios-signing  # make sure your .p12 and .mobileprovision are in this group
+        - ios-signing
       vars:
         XCODE_WORKSPACE: "ITF UTILITY.xcworkspace"
         XCODE_SCHEME: "ITF UTILITY"
         XCODE_PROJECT: "platforms/ios/ITF UTILITY.xcodeproj"
         DEVELOPMENT_TEAM: M5BW9K22PK
 
-    code_signing:
+    signing:
       certificates:
-        - itf_distribution_cert          # must match certificate name in Codemagic
+        - name: itf_distribution_cert
       provisioning_profiles:
-        - itf_distribution_profile       # must match profile name in Codemagic
+        - name: itf_distribution_profile
 
     scripts:
       - name: Install Cordova
