Fix Codemagic signing block placementV302

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -10,16 +10,13 @@ workflows:
         XCODE_SCHEME: "ITF UTILITY"
         XCODE_PROJECT: "platforms/ios/ITF UTILITY.xcodeproj"
         DEVELOPMENT_TEAM: M5BW9K22PK
-
-    publishing:
-      app_store_connect:
-        credentials: ios-signing
-        submit_to_testflight: false
-        release_type: manual
-        distribution_certificates:
-          - name: itf_distribution_cert
-        provisioning_profiles:
-          - name: itf_distribution_profile
+      automatic_code_signing:
+        team_id: M5BW9K22PK
+        use_automatic_signing: false
+        certificate_ids:
+          - itf_distribution_cert
+        provisioning_profile_ids:
+          - itf_distribution_profile
 
     scripts:
       - name: Install Cordova
