--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -10,29 +10,36 @@ workflows:
         XCODE_SCHEME: "ITF UTILITY"
         XCODE_PROJECT: "platforms/ios/ITF UTILITY.xcodeproj"
         DEVELOPMENT_TEAM: M5BW9K22PK
-
     scripts:
-      - name: Install Cordova
+      - name: Install Cordova & Dependencies
         script: |
           npm install -g cordova
-
-      - name: Install Dependencies
-        script: |
           npm install
-
-      - name: Clean and Add iOS platform and build
+      - name: Prepare Cordova project
         script: |
           rm -rf platforms/ plugins/
           cordova telemetry off
           cordova platform add ios
-          cordova build ios --release --device --buildConfig=build.json \
-          --buildFlag="-allowProvisioningUpdates" \
-          --buildFlag="-UseModernBuildSystem=0" \
-          --buildFlag="-allowProvisioningDeviceRegistration" \
-          --buildFlag="-exportOptionsPlist=exportOptions.plist" \
-          --buildFlag="-codeSignIdentity='Apple Distribution'" \
-          --developmentTeam=$DEVELOPMENT_TEAM
-
-
+      - name: Build iOS app
+        script: |
+          xcodebuild -workspace "$XCODE_WORKSPACE" \
+                     -scheme "$XCODE_SCHEME" \
+                     -configuration Release \
+                     -destination "generic/platform=iOS" \
+                     -archivePath build/$XCODE_SCHEME.xcarchive \
+                     -allowProvisioningUpdates \
+                     -archive
+      - name: Export IPA
+        script: |
+          xcodebuild -exportArchive \
+                     -archivePath build/$XCODE_SCHEME.xcarchive \
+                     -exportOptionsPlist exportOptions.plist \
+                     -exportPath build/export \
+                     -allowProvisioningUpdates
     artifacts:
-      - platforms/ios/build/device/*.ipa
+      - build/export/*.ipa
+    publishing:
+      app_store_connect:
+        api_key: $APP_STORE_CONNECT_PRIVATE_KEY
+        key_id: $APP_STORE_CONNECT_KEY_ID
+        issuer_id: $APP_STORE_CONNECT_ISSUER_ID
